--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -8,7 +8,6 @@ $zone: 20px;
   font-family: system, -apple-system, Roboto, Helvetica Neue, Arial, Helvetica, Geneva, sans-serif;
   box-sizing: border-box;
 
-
   .jqs-table {
     position: relative;
     z-index: 10;
@@ -96,5 +95,15 @@ $zone: 20px;
       border: 1px solid #2a3cff;
       border-radius: 3px;
     }
+  }
+
+  .jqs-remove {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    height: 10px;
+    width: 10px;
+    background: #000;
+    cursor: pointer;
   }
 }
