--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -16,7 +16,8 @@ $zone: 20px;
     border-collapse: collapse;
     border-spacing: 0;
     box-sizing: content-box;
-    td, th {
+    td,
+    th {
       padding: 0;
     }
     td {
@@ -32,6 +33,21 @@ $zone: 20px;
     left: $gutter * 3;
     right: $gutter;
     box-sizing: content-box;
+
+    .jqs-grid-head {
+      position: absolute;
+      top: -$gutter;
+      left: 0;
+      right: 0;
+      display: flex;
+    }
+
+    .jqs-grid-day {
+      width: (100%/7);
+      text-align: center;
+      font-size: 12px;
+    }
+
     .jqs-grid-line {
       border-top: 1px solid #ccc;
       border-bottom: 1px solid transparent;
@@ -40,15 +56,6 @@ $zone: 20px;
       &:last-child {
         height: 0;
         border-bottom: none;
-      }
-      span {
-        position: absolute;
-        top: ($zone/2 - 3) * -1;
-        left: ($gutter * 2.5) * -1;
-        font-size: 12px;
-        display: block;
-        width: 42px;
-        text-align: right;
       }
       &:before {
         content: "";
@@ -60,18 +67,14 @@ $zone: 20px;
       }
     }
 
-    .jqs-grid-head {
+    .jqs-grid-hour {
       position: absolute;
-      top: -$gutter;
-      left: 0;
-      right: 0;
-      display: flex;
-      .jqs-grid-day {
-        width: (100%/7);
-        text-align: center;
-        font-size: 12px;
-
-      }
+      top: ($zone/2 - 3) * -1;
+      left: ($gutter * 2.5) * -1;
+      display: block;
+      width: 42px;
+      font-size: 12px;
+      text-align: right;
     }
   }
 
@@ -85,10 +88,9 @@ $zone: 20px;
     position: absolute;
     width: 100%;
     min-height: $zone;
-    font-size: 11px;
     line-height: 1;
 
-    .jqs-period-placeholder {
+    .jqs-period-container {
       position: absolute;
       top: 2px;
       bottom: 2px;
@@ -100,36 +102,40 @@ $zone: 20px;
       border-radius: 3px;
     }
 
-    .jqs-remove {
-      display: none;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      height: 14px;
-      width: 14px;
-      cursor: pointer;
-      &:before,
-      &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        height: 100%;
-        width: 2px;
-        left: 6px;
-        background: #2a3cff;
-      }
-      &:before {
-        transform: rotate(45deg);
-      }
-      &:after {
-        transform: rotate(-45deg);
-      }
+    .jqs-period-title {
+      font-size: 11px;
     }
 
     &:hover {
       .jqs-remove {
         display: block;
       }
+    }
+  }
+
+  .jqs-remove {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 14px;
+    width: 14px;
+    cursor: pointer;
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      height: 100%;
+      width: 2px;
+      left: 6px;
+      background: #2a3cff;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
     }
   }
 
