Add period duration feature

--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -88,7 +88,7 @@ $zone: 20px;
   .jqs-period {
     position: absolute;
     width: 100%;
-    min-height: $zone;
+    min-height: 10px;
     line-height: 1;
 
     .jqs-period-container {
