Fix bug periodDuration option and Update README

--- a/src/scss/jquery.schedule-demo.scss
+++ b/src/scss/jquery.schedule-demo.scss
@@ -6,10 +6,7 @@ html {
   font-family: system, -apple-system, Roboto, Helvetica Neue, Arial, Helvetica, Geneva, sans-serif;
 }
 
-body {
-  margin: 10px;
-}
-
+/*
 h2 {
   text-decoration: underline;
 }
@@ -39,3 +36,4 @@ textarea {
   border: 1px solid #ddd;
   margin-bottom: 20px;
 }
+*/
