--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -167,12 +167,23 @@ $zone: 20px;
       font-size: 11px;
       margin-bottom: $padding;
       margin-right: $padding/4;
+      cursor: pointer;
     }
   }
 
   .jqs-remove {
+    display: inline-block;
     cursor: pointer;
-    padding: $padding/2;
+    padding: 10px 20px;
+    border: 1px solid rgba(0,0,0,0.1);
+    background: #f5f5f5;
+    color: #444;
+    font-weight: 700;
+    font-size: 11px;
+    &:hover {
+      background: #c6c6c6;
+      color: #333;
+    }
   }
 
   .jqs-close {
