--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -116,6 +116,36 @@ $zone: 20px;
       line-height: 16px;
     }
 
+    .jqs-period-remove {
+      display: none;
+      position: absolute;
+      bottom: 2px;
+      right: 2px;
+      height: 10px;
+      width: 10px;
+      cursor: pointer;
+      &:before,
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        height: 100%;
+        width: 2px;
+        left: 4px;
+        background: #000;
+      }
+      &:before {
+        transform: rotate(45deg);
+      }
+      &:after {
+        transform: rotate(-45deg);
+      }
+    }
+
+    &:hover .jqs-period-remove {
+      display: block;
+    }
+
     &.min {
       .jqs-period-time,
       .jqs-period-title {
@@ -174,7 +204,7 @@ $zone: 20px;
   .jqs-remove {
     display: inline-block;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: 1px solid rgba(0,0,0,0.1);
     background: #f5f5f5;
     color: #444;
@@ -200,7 +230,7 @@ $zone: 20px;
       position: absolute;
       height: 100%;
       width: 2px;
-      left: 6px;
+      left: 4px;
       background: #000;
     }
     &:before {
