Scss refacto and update doc

--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -1,6 +1,8 @@
 $gutter: 20px;
 $zone: 20px;
 
+$padding: 16px;
+
 .jqs {
   position: relative;
   padding: $gutter*2 $gutter $gutter $gutter*3;
@@ -8,7 +10,7 @@ $zone: 20px;
   font-family: system, -apple-system, Roboto, Helvetica Neue, Arial, Helvetica, Geneva, sans-serif;
   box-sizing: border-box;
 
-  .jqs-table {
+  &-table {
     position: relative;
     z-index: 10;
     width: 100%;
@@ -27,14 +29,14 @@ $zone: 20px;
     }
   }
 
-  .jqs-grid {
+  &-grid {
     position: absolute;
     top: $gutter * 2;
     left: $gutter * 3;
     right: $gutter;
     box-sizing: content-box;
 
-    .jqs-grid-head {
+    &-head {
       position: absolute;
       top: -$gutter;
       left: 0;
@@ -42,13 +44,13 @@ $zone: 20px;
       display: flex;
     }
 
-    .jqs-grid-day {
+    &-day {
       width: (100%/7);
       text-align: center;
       font-size: 12px;
     }
 
-    .jqs-grid-line {
+    &-line {
       border-top: 1px solid #ccc;
       border-bottom: 1px solid transparent;
       position: relative;
@@ -68,7 +70,7 @@ $zone: 20px;
       }
     }
 
-    .jqs-grid-hour {
+    &-hour {
       position: absolute;
       top: ($zone/2 - 3) * -1;
       left: ($gutter * 2.5) * -1;
@@ -79,18 +81,62 @@ $zone: 20px;
     }
   }
 
-  .jqs-day {
+  &-day {
     width: 100%;
     height: $zone* 2 * 24;
     position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
-  .jqs-period {
+  &-period {
     position: absolute;
     width: 100%;
     min-height: 10px;
 
-    .jqs-period-container {
+    &:hover .jqs-period-remove {
+      display: block;
+    }
+
+    &-15 {
+      .jqs-period-time,
+      .jqs-period-title {
+        display: none;
+      }
+      .jqs-period-remove {
+        height: 8px;
+        width: 8px;
+        bottom: -1px;
+      }
+    }
+
+    &-30 {
+      .jqs-period-time {
+        display: block;
+      }
+      .jqs-period-title {
+        display: none;
+      }
+    }
+
+    &-time,
+    &-title {
+      display: block;
+      font-size: 11px;
+      line-height: 12px;
+      letter-spacing: -0.5px;
+      word-break: break-all;
+      overflow: hidden;
+    }
+
+    &-time {
+      font-weight: 700;
+      line-height: 16px;
+    }
+
+    &-container {
       position: absolute;
       top: 2px;
       bottom: 2px;
@@ -101,22 +147,31 @@ $zone: 20px;
       box-sizing: border-box;
     }
 
-    .jqs-period-time,
-    .jqs-period-title {
-      display: block;
-      font-size: 11px;
-      line-height: 12px;
-      letter-spacing: -0.5px;
-      word-break: break-all;
-      overflow: hidden;
+    &-helper {
+      position: absolute;
+      width: 100%;
+      min-height: 10px;
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 2px;
+        bottom: 2px;
+        left: 2px;
+        right: 2px;
+        background-color: rgba(50, 50, 50, .1);
+      }
+      &-time {
+        padding: 2px 0 0 5px;
+        font-size: 11px;
+        font-weight: 700;
+        line-height: $padding;
+        letter-spacing: -0.5px;
+        color: #666;
+      }
     }
 
-    .jqs-period-time {
-      font-weight: 700;
-      line-height: 16px;
-    }
-
-    .jqs-period-remove {
+    &-remove {
       display: none;
       position: absolute;
       bottom: 2px;
@@ -141,54 +196,9 @@ $zone: 20px;
         transform: rotate(-45deg);
       }
     }
-
-    &:hover .jqs-period-remove {
-      display: block;
-    }
-
-    &.min {
-      .jqs-period-time,
-      .jqs-period-title {
-        display: none;
-      }
-    }
-
-    &.small {
-      .jqs-period-time {
-        display: block;
-      }
-      .jqs-period-title {
-        display: none;
-      }
-    }
   }
 
-  .jqs-period-helper {
-    position: absolute;
-    width: 100%;
-    min-height: 10px;
-    .jqs-period-helper-time {
-      font-size: 11px;
-      font-weight: 700;
-      line-height: 16px;
-      letter-spacing: -0.5px;
-      color: #666;
-    }
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 2px;
-      bottom: 2px;
-      left: 2px;
-      right: 2px;
-      background-color: rgba(50, 50, 50, .1);
-    }
-  }
-
-  $padding: 16px;
-
-  .jqs-options {
+  &-options {
     position: absolute;
     top: 0;
     left: 0;
@@ -197,73 +207,74 @@ $zone: 20px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
     padding: $padding;
-  }
 
-  .jqs-options-time {
-    font-size: 11px;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: -0.5px;
-    color: #000;
-  }
-
-  .jqs-options-title {
-    width: 220px;
-    font-size: 11px;
-    border: none;
-    border-bottom: 1px solid #333;
-    margin-bottom: $padding;
-    margin-right: $padding + 20;
-  }
-  .jqs-options-color {
-    display: inline-block;
-    border-radius: 3px;
-    border-style: solid;
-    border-width: 1px;
-    height: 25px;
-    font-size: 11px;
-    margin-bottom: $padding;
-    margin-right: $padding/4;
-    cursor: pointer;
-  }
-
-  .jqs-options-remove {
-    display: inline-block;
-    cursor: pointer;
-    padding: 5px 10px;
-    border: 1px solid rgba(0,0,0,0.1);
-    background: #f5f5f5;
-    color: #444;
-    font-weight: 700;
-    font-size: 11px;
-    &:hover {
-      background: #c6c6c6;
-      color: #333;
+    &-time {
+      font-size: 11px;
+      font-weight: 700;
+      line-height: $padding;
+      letter-spacing: -0.5px;
+      color: #000;
     }
-  }
 
-  .jqs-options-close {
-    position: absolute;
-    top: $padding;
-    right: $padding;
-    height: 20px;
-    width: 20px;
-    cursor: pointer;
-    &:before,
-    &:after {
-      content: "";
-      display: block;
+    &-title {
+      width: 220px;
+      font-size: 11px;
+      border: none;
+      border-bottom: 1px solid #333;
+      margin-bottom: $padding;
+      margin-right: $padding + 20;
+    }
+
+    &-color {
+      display: inline-block;
+      border-radius: 3px;
+      border-style: solid;
+      border-width: 1px;
+      height: 25px;
+      font-size: 11px;
+      margin-bottom: $padding;
+      margin-right: $padding/4;
+      cursor: pointer;
+    }
+
+    &-remove {
+      display: inline-block;
+      cursor: pointer;
+      padding: 5px 10px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background: #f5f5f5;
+      color: #444;
+      font-weight: 700;
+      font-size: 11px;
+      &:hover {
+        background: #c6c6c6;
+        color: #333;
+      }
+    }
+
+    &-close {
       position: absolute;
-      height: 100%;
-      width: 2px;
-      left: 4px;
-      background: #000;
-    }
-    &:before {
-      transform: rotate(45deg);
-    }
-    &:after {
-      transform: rotate(-45deg);
+      top: $padding;
+      right: $padding;
+      height: 20px;
+      width: 20px;
+      cursor: pointer;
+      &:before,
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        height: 100%;
+        width: 2px;
+        left: 4px;
+        background: #000;
+      }
+      &:before {
+        transform: rotate(45deg);
+      }
+      &:after {
+        transform: rotate(-45deg);
+      }
     }
   }
 }
