--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -253,17 +253,19 @@ $padding: 16px;
       cursor: pointer;
     }
 
+    &-duplicate,
     &-remove {
       display: inline-block;
       cursor: pointer;
       padding: 5px 10px;
+      margin-right: 5px;
       border: 1px solid rgba(0, 0, 0, 0.1);
       background: #f5f5f5;
       color: #444;
       font-weight: 700;
       font-size: 11px;
       &:hover {
-        background: #c6c6c6;
+        background: #e5e5e5;
         color: #333;
       }
     }
