Hide the remove button for very small period

--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -150,13 +150,8 @@ $padding: 16px;
       display: block;
     }
 
-    &-15 &-remove,
-    &-15 &-duplicate {
-      height: 8px;
-      width: 8px;
-      bottom: -1px;
-    }
-
+    &-15:hover &-remove,
+    &-15:hover &-duplicate,
     &-15 &-time,
     &-15 &-title {
       display: none;
