--- a/src/scss/jquery.schedule.scss
+++ b/src/scss/jquery.schedule.scss
@@ -123,7 +123,7 @@ $padding: 16px;
 
   &-day {
     width: 100%;
-    height: $zone* 2 * 24;
+    // height: $zone * 2 * 24;
     position: relative;
     -webkit-user-select: none;
     -moz-user-select: none;
